# formjam

./: .env.example  .gitignore  .osv-scanner.toml  CHANGELOG.md  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: action.yml  release-desktop.yml  release-please.yml  security-audit.yml
docs/db/: schema.md
pb_migrations/: 1781827200_set_api_rules.js
src/: App.vue  main.ts  style.css
src-tauri/: .gitignore  Cargo.toml  SECURITY_AUDIT.md  deny.toml  tauri.conf.json
src/components/auth/: Login.vue  Signup.vue
src/components/common/: ThemeToggle.vue  Tooltip.vue
src/components/dashboard/: FilterTab.vue  MobileNavbar.vue  Navbar.vue
src/components/form/: FormNavbar.vue
src/components/form/question/: Answer.vue  FormQuestion.vue  FormTitle.vue  (+2 more)
src/components/home/: HomeNavbar.vue
src/components/inputs/: Dropdown.vue  Editor.vue  TextInput.vue
src/components/profile/: PersonalInfoForm.vue
src/composables/: useReveal.ts
src/layout/: auth.vue  default.vue
src/pages/: 404.vue  dashboard.vue  error.vue
src/pages/form/: edit.vue  preview.vue  success.vue  view.vue
src/router/: index.ts  middleware.ts
src/store/: forms.ts  notifications.ts  questions.ts  responses.ts  settings.ts
src/types/: form.d.ts  pocketbase.d.ts
src/utils/: common.ts  responses.ts  validation.ts
src/utils/form/: index.ts
tests/: auth.setup.ts  auth.spec.ts  cleanup.teardown.ts  dashboard.spec.ts  helpers.ts  responses.spec.ts  tsconfig.json  ui.spec.ts  validation.spec.ts
(+17 files in other folders)
